fix word wrapping

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -11,3 +11,10 @@ img {
   margin: 0 auto 50px auto;
   overflow: hidden;
 }
+
+@media screen and (max-width:600px) {
+  img {
+    height: 300px;
+    width: 300px;
+  }
+}
