--- a/src/components/CreateFrame/CreateFrame.css
+++ b/src/components/CreateFrame/CreateFrame.css
@@ -40,12 +40,14 @@
 .frameMessageForm {
   margin: 10px 0;
   font-size: 20px;
+  padding: 5px;
 }
 
 .frameNameForm {
   margin: 80px 0 20px 0;
   font-size: 28px;
   width: 100%;
+  padding: 5px;
 }
 
 .frameSubmitButton {
