--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -62,6 +62,7 @@
   height: 100px;
   margin: auto;
   width: 80%;
+  word-wrap: break-word;
 }
 
 .frameDiv:hover {
@@ -71,4 +72,16 @@
 .header {
   justify-content: center;
   padding: 40px 0;
+}
+
+@media screen and (max-width: 600px) {
+  .frameDiv {
+    width: 90vw;
+    margin: auto;
+    margin-bottom: 30px;
+  }
+
+  .frameDiv img {
+    width: 80vw;
+  }
 }
